FIX wron alignment of texts and headings in some display widgets

--- a/Templates/js/template.css
+++ b/Templates/js/template.css
@@ -42,6 +42,7 @@ ul.nav_menu a:hover {color: white; font-weight: bold; text-decoration: none; dis
 .exf-input label {margin: 0 3px; display: inline-block; max-width: 157px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; vertical-align: middle;}
 .exf-input textarea {vertical-align:middle;border: 1px solid #c3d9e0; tab-size: 4}
 .exf-display .exf-labeled-item {text-align: left; font-weight: bold; padding-left: 3px;}
+.exf-display * {text-align: initial;}
 .numberbox input {text-align: right;}
 fieldset.exface_inputgroup {border-color: #95B8E7; border-width: 1px 0 0 0; padding: 10px 0; margin: 15px 0 0 0;}
 fieldset.exface_inputgroup legend {color: #404040; font-weight: bold; padding: 0 6px; margin: 0 10px;}
